# WikidataTopicCurator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  UPDATE.md  api.py  app.py  build_and_run_container.sh  config.py  config_example.py  debug.py  lint.sh  pyproject.toml  pytest.ini  update_poetry.sh
.github/workflows/: lint_python.yml
config/: database_example.yml
deprecated/: app.py  test_revisions.py
deprecated/mediawiki/: revisions.py
models/: Term.py  articles.py  cirrussearch.py  enums.py  exceptions.py  google_scholar.py  html_terms_builder.py  item.py  parameters.py  published_article_query.py  qlever.py  query.py  results.py  sparqlitem.py  sparqlvalue.py  subtopics.py  term.py  terms.py  topic.py  topic_curator_base_model.py  topic_item.py  topicparameters.py  value.py
models/database/: batch.py  database_settings.py  finished_item.py  load_database_config.py
models/mediawiki/: revision.py  revisions.py
models/wikibase_rest/: __init__.py  item.py
sql/: create.sql
templates/: footer.html  goto.html  head.html  index.html  lang.html  navbar.html  results.html  subclass_of.html  subgraph.html  term.html  terms.html  working_on.html
tests/: test_revisions.py  test_sparqlitem.py  test_subtopics.py
uml/: database.puml
