[tool.poetry]
name = "wikidatatopiccurator"
version = "1.0.0"
description = ""
authors = ["Dennis Priskorn <you@example.com>"]
license = "GPLv3+"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.3"
flask = "^3.0.1"
wikibaseintegrator = "^0.12.5"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
