[tool.poetry]
name = "wikidatatopiccurator"
version = "1.0.0"
description = ""
authors = ["Dennis Priskorn <you@example.com>"]
license = "GPLv3+"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
pydantic = "^2.5.3"
flask = "^3.0.1"
wikibaseintegrator = "^0.12.5"
requests = "^2.31.0"
lxml = "^5.1.0"
beautifulsoup4 = "^4.12.3"
pyyaml = "^6.0.1"
# flask-sqlalchemy = "^3.1.1"
# mysql = "^0.0.3"
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
